test/libsolidity/syntaxTests/nameAndTypeResolution/205_overwrite_storage_location_external.sol
contract C {
    function f(uint[] storage a) external {}
}
// ----
// TypeError: (28-44): Location has to be calldata for external functions (remove the "memory" or "storage" keyword).
